--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="Electronic Client Dossier"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:your_random_key_here
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_PORT=5432
+DB_DATABASE=electronic_client_dossier
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -28,7 +28,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
+MAIL_MAILER=log
 MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USERNAME=null
