--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,7 +15,9 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install
+      run: |
+        composer install
+        npm install
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
