--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -3,33 +3,46 @@ name: Laravel
 on: [push, pull_request]
 
 jobs:
-  laravel-tests:
-
+  build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Set up PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.1'
-    - uses: actions/checkout@v3
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: |
-        composer install
-        npm install
-        npm run build
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+      - name: Set up environment
+        run: php -r "copy('.env.example', '.env');"
+      - name: Generate key
+        run: php artisan key:generate
+      - name: Install dependencies
+        run: |
+          composer install
+          npm install
+      - name: Build application
+        run: npm run build
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Create database
+        run: touch database/database.sqlite
+      - name: Execute unit tests
+        env:
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
+        run: vendor/bin/phpunit --log-junit tests/report.xml
+      - name: Archive test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: unit-test-report
+          path: tests/report.xml
+
+  style:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Execute code style tests
+        run: vendor/bin/pint --test
