--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -27,6 +27,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Create database
         run: touch database/database.sqlite
       - name: Execute unit tests
@@ -44,5 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Execute code style tests
         run: vendor/bin/pint --test
