--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -3,8 +3,9 @@ name: Laravel
 on: [push, pull_request]
 
 jobs:
-  build-test:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -22,8 +23,27 @@ jobs:
         run: php artisan key:generate
       - name: Build application
         run: npm run build
-      - name: Execute code style tests
-        run: vendor/bin/pint --test
+      - name: Cache Laravel dependencies
+        uses: actions/cache@v3
+        with:
+          key: laravel-dependencies
+          path: |
+            ~/venodr
+            ~/node_modules
+            ~/.env
+            ~/public/build
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Restore Laravel dependencies
+              uses: actions/cache@v3
+              with:
+                key: laravel-dependencies
       - name: Create database
         run: touch database/database.sqlite
       - name: Execute unit tests
@@ -36,3 +56,18 @@ jobs:
         with:
           name: unit-test-report
           path: tests/report.xml
+          retention-days: 7
+
+  lint:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Restore Laravel dependencies
+        uses: actions/cache@v3
+        with:
+          key: laravel-dependencies
+      - name: Execute code style tests
+        run: vendor/bin/pint --test
