--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,12 +26,12 @@ jobs:
       - name: Cache Laravel dependencies
         uses: actions/cache@v3
         with:
-          key: laravel-dependencies
           path: |
             ~/venodr
             ~/node_modules
             ~/.env
             ~/public/build
+          key: laravel-dependencies
 
   test:
     runs-on: ubuntu-latest
@@ -43,12 +43,13 @@ jobs:
       - name: Restore Laravel dependencies
         uses: actions/cache@v3
         with:
-          key: laravel-dependencies
           path: |
             ~/venodr
             ~/node_modules
             ~/.env
             ~/public/build
+          key: laravel-dependencies
+          fail-on-cache-miss: true
       - name: Create database
         run: touch database/database.sqlite
       - name: Execute unit tests
@@ -73,11 +74,12 @@ jobs:
       - name: Restore Laravel dependencies
         uses: actions/cache@v3
         with:
-          key: laravel-dependencies
           path: |
             ~/venodr
             ~/node_modules
             ~/.env
             ~/public/build
+          key: laravel-dependencies
+          fail-on-cache-miss: true
       - name: Execute code style tests
         run: vendor/bin/pint --test
