--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -43,7 +43,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Restore Laravel dependencies
+      - name: Cache Laravel dependencies
         uses: actions/cache@v3
         with:
           path: |
@@ -55,7 +55,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
             ${{ runner.os }}-composer-
-          fail-on-cache-miss: true
       - name: Create database
         run: touch database/database.sqlite
       - name: Execute unit tests
@@ -77,7 +76,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Restore Laravel dependencies
+      - name: Cache Laravel dependencies
         uses: actions/cache@v3
         with:
           path: |
@@ -89,6 +88,5 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
             ${{ runner.os }}-composer-
-          fail-on-cache-miss: true
       - name: Execute code style tests
         run: vendor/bin/pint --test
