--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -31,10 +31,7 @@ jobs:
             ~/node_modules
             ~/.env
             ~/public/build
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-            ${{ runner.os }}-composer-
+          key: laravel-dependencies-cache
 
   test:
     runs-on: ubuntu-latest
@@ -51,10 +48,7 @@ jobs:
             ~/node_modules
             ~/.env
             ~/public/build
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-            ${{ runner.os }}-composer-
+          key: laravel-dependencies-cache
       - name: Create database
         run: touch database/database.sqlite
       - name: Execute unit tests
@@ -84,9 +78,6 @@ jobs:
             ~/node_modules
             ~/.env
             ~/public/build
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-            ${{ runner.os }}-composer-
+          key: laravel-dependencies-cache
       - name: Execute code style tests
         run: vendor/bin/pint --test
