--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -40,7 +40,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Cache Laravel dependencies
+      - name: Restore Laravel dependencies
         uses: actions/cache@v3
         with:
           path: |
@@ -70,7 +70,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Cache Laravel dependencies
+      - name: Restore Laravel dependencies
         uses: actions/cache@v3
         with:
           path: |
