--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,6 +23,12 @@ jobs:
         run: php artisan key:generate
       - name: Build application
         run: npm run build
+      - name: List files for caching
+        run: |
+          ls ~/vendor
+          ls ~/node_modules
+          ls ~/.env
+          ls ~/public/build
       - name: Cache Laravel dependencies
         uses: actions/cache@v3
         with:
