Fix GitHub Actions workflow (#6)
* Update laravel.yml

* Update packages

* Update laravel.yml

* Update laravel.yml

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,6 +1,6 @@
 name: Laravel
 
-on: pull_request
+on: push
 
 jobs:
   build:
@@ -31,7 +31,7 @@ jobs:
             node_modules
             .env
             public/build
-          key: laravel-dependencies
+          key: laravel-node-${{ hashFiles('package-lock.json') }}-composer-${{ hashFiles('composer.lock') }}
 
   test:
     runs-on: ubuntu-latest
@@ -48,7 +48,7 @@ jobs:
             node_modules
             .env
             public/build
-          key: laravel-dependencies
+          key: laravel-node-${{ hashFiles('package-lock.json') }}-composer-${{ hashFiles('composer.lock') }}
       - name: Create database
         run: touch database/database.sqlite
       - name: Execute unit tests
@@ -78,6 +78,6 @@ jobs:
             node_modules
             .env
             public/build
-          key: laravel-dependencies
+          key: laravel-node-${{ hashFiles('package-lock.json') }}-composer-${{ hashFiles('composer.lock') }}
       - name: Execute code style tests
         run: vendor/bin/pint --test
