--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -40,6 +40,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
       - name: Restore Laravel dependencies
         uses: actions/cache@v3
         with:
@@ -70,6 +74,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
       - name: Restore Laravel dependencies
         uses: actions/cache@v3
         with:
